# pruebaRAID5

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  StorageManger.cpp  StorageManger.h  main.cpp
